# arbre

./: Arbre.cabal  README  arbre-workspace.lkshs  arbre-workspace.lkshw  eval.yaml  eval.yaml.back  eval2.yaml  out  sicp.json  test.hs  test.json  test.stream  test.yaml  test2.json  view.json  views.json  views2json.py  yaml2json.py
Arbre/: Box.hs  Context.hs  Core.hs  Create.hs  Eval.hs  Event.hs  Expressions.hs  Load.hs  Mutation.hs  Native.hs  NativeTypes.hs  NewNative.hs  NewPrint.hs  Objects.hs  OldNative.hs  Path.hs  Print.hs  Program.hs  Receiver.hs  Short.hs  View.hs
